--- a/education.html
+++ b/education.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a href="index.html">About</a></li>
                 <li><a class="selected" href="#">Education</a></li>
+                <li><a href="./experiences.html">Experiences</a></li>
             </ul>
         </nav>
     </header>
