--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <ul>
                 <li><a class="selected" href="#">About</a></li>
                 <li><a href="./education.html">Education</a></li>
+                <li><a href="./experiences.html">Experiences</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +50,7 @@
                         <li>I have written few modules for the popular MV* framework <em>Angularjs</em></li>
                     </ul>
                     <p>
-                        Aside of this I regularly write application with the <em>Nodejs</em> platform whose paradigm
+                        Aside of this I regularly write applications with the <em>Nodejs</em> platform whose paradigm
                         fits me
                         well.
                     </p>
