add video plus font

--- a/experiences.html
+++ b/experiences.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="theme/theme.css"/>
-    <!--<link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>-->
+    <link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
     <title>Laurent RENARD resume -About-</title>
 </head>
 <body>
@@ -84,8 +84,8 @@
                     </ul>
                     <p>
                         Here is a video I recorded to promote my work during the internal intern contest.
-                        <!--<iframe src="//player.vimeo.com/video/48457676" width="500" height="281" frameborder="0"-->
-                        <!--webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>-->
+                        <iframe src="//player.vimeo.com/video/48457676" width="500" height="281" frameborder="0"
+                        webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 
                 </article>
