--- a/experiences.html
+++ b/experiences.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="theme/theme.css"/>
     <link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
     <title>Laurent RENARD resume -About-</title>
@@ -28,7 +29,7 @@
                 <article>
                     <h2>Amadeus IT</h2>
 
-                    <p class="meta">January 2012-April 2014,Nice, France</p>
+                    <p class="meta">January 2013-April 2014,Nice, France</p>
 
                     <p><em>Web/Software developer</em></p>
 
