--- a/education.html
+++ b/education.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="theme/theme.css"/>
     <link href='http://fonts.googleapis.com/css?family=Cinzel:700,400|Ruluko' rel='stylesheet' type='text/css'>
     <title>Laurent RENARD resume</title>
