--- a/experiences.html
+++ b/experiences.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="theme/theme.css"/>
     <link href='http://fonts.googleapis.com/css?family=Ruluko' rel='stylesheet' type='text/css'>
-    <title>Laurent RENARD resume -About-</title>
+    <title>Laurent RENARD resume - Experiences-</title>
 </head>
 <body>
 <div class="main-container">
@@ -14,6 +14,7 @@
                 <li><a href="./index.html">About</a></li>
                 <li><a href="./education.html">Education</a></li>
                 <li><a class="selected" href="./experiences.html">Experiences</a></li>
+                <li><a href="./open-source.html">Open-source</a></li>
             </ul>
         </nav>
     </header>
@@ -151,7 +152,7 @@
         <ul>
             <li><a href="https://github.com/lorenzofox3" class="icon github"></a></li>
             <li><a href="https://www.linkedin.com/profile/view?id=202908429" class="icon linked-in"></a></li>
-            <li><a href="" class="icon email"></a></li>
+            <li><a href="mailto:laurent34azerty@gmail.com" class="icon email"></a></li>
         </ul>
     </footer>
 
