--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a class="selected" href="#">About</a></li>
                 <li><a href="./education.html">Education</a></li>
                 <li><a href="./experiences.html">Experiences</a></li>
+                <li><a href="./open-source.html">Open-source</a></li>
             </ul>
         </nav>
     </header>
@@ -90,7 +91,7 @@
         <ul>
             <li><a href="https://github.com/lorenzofox3" class="icon github"></a></li>
             <li><a href="https://www.linkedin.com/profile/view?id=202908429" class="icon linked-in"></a></li>
-            <li><a href="" class="icon email"></a></li>
+            <li><a href="mailto:laurent34azerty@gmail.com" class="icon email"></a></li>
         </ul>
     </footer>
 </div>
